assets/css/app.css
/* THANKS IE
:root {
    --primary-color-100: #004b9d;
    --primary-color-75: #0062b4;
    --primary-color-60: #006ec4;
    --secondary-color: #d30039;
}
*/

/* ==== */
/* BASE */
/* ==== */

html {
    font-size: 62.5%;
}

body {
    font-size: 1.6rem;
    background-color: #d5ecff;
}

*, *::before, *::after {
    box-sizing: border-box;
}

a {
    color: inherit;
}

@media (min-width: 768px) {
    .hide-on-desktop {
        display: none;
    }
}

@media (max-width: 768px) {
    .hide-on-mobile {
        display: none;
    }
}

.container {
    width: 100%;
    max-width: 1024px;
    margin-left: auto;
    margin-right: auto;
}

h2 {
    color: #d30039;
}

/* ====== */
/* HEADER */
/* ====== */

#header {
    padding: 1em 0;
    margin-bottom: 1em;
    background-color: #fff;
    box-shadow: 0 0 10px rgba(0, 0, 0, .5);
}

#header .container {
    display: flex;
    align-items: center;
}

#header .site--logo {
    height: 72px;
}

#header .site--title {
    padding-left: 8px;
    /* thanks IE */
    /*color: var(--primary-color-100);*/
    color: #004b9d;
}

#header .site--navigation {
    flex: 1;
    text-align: right;
    font-size: 2rem;
    color: #d30039;
}

#header .site--navigation a {
    display: inline-block;
    text-decoration: none;
    padding: .25em 1em
}

/* ====== */
/* FOOTER */
/* ====== */

#footer {
    margin-top: 1em;
    padding: 3em 0;
    background-color: #0058a0;
    color: #fff;
    box-shadow: 0 0 10px rgba(0, 0, 0, .5)
}

#footer .logo {
    display: block;
    max-height: 10em;
    margin: 0 auto;
}

/* ======================= */
/* FORMULAIRE DE RECHERCHE */
/* ======================= */

.form-search {
    margin: 0 0 1em;
    padding: .5em;
    background-color: #d30039;
    box-shadow: 0 0 1px #d30039;
    color: #fff;
}

/* ====== */
/* LA PUB */
/* ====== */

.ads {
    text-align: center;
    padding: 1em 0;
}

/* ============== */
/* BARRE D'ACTION */
/* ============== */

.bar-actions {
    margin: 1em 0 .75em;
    padding: .5rem;
    /* thanks IE */
    /*background-color: var(--secondary-color);*/
    background-color: #d30039;
    color: #fff;
}

.bar-actions > * {
    vertical-align: -1em;
}

/* ================== */
/* MAISONS ET APPARTS */
/* ================== */

.property {
    overflow: hidden;
}

.property--image {
    max-width: 100%;
    max-height: 100%;
}

.property--name,
.property--price {
    display: block;
}

.property--name {
    color: #d30039;
    font-size: 1.8rem;
}

.property--type:after {
    content: ', '
}

.property--see-details {
    width: 100%
}

@media all and (max-width: 768px) {
    .property {
        height: 5em;
        margin: .2em 0;
    }

    .property--name,
    .property--type,
    .property--price {
        padding-left: .5em;
    }

    .property--see-details {
        margin-left: .5em;
    }
}

/* ========== */
/* GOOGLE MAP */
/* ========== */

.map-wrapper {
    position: relative;
    padding-bottom: 56.25%; /* 16:9 */
    padding-top: 25px;
    height: 0;
}

.map-wrapper .map {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

